--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "alertify": "^0.3.0",
+    "alertifyjs": "^1.13.1",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "react": "^18.2.0",
